# datacraft-framework

./: .gitignore  404.html  README.md  mkdocs.yaml  pyproject.toml
Common/DataProcessor/: index.html
Common/FileNameGenerator/: index.html
Common/OrchestrationProcess/: index.html
Common/RegexDateFormats/: index.html
Common/S3Process/: index.html
Common/SchemaCaster/: index.html
Examples/Connection Config/: index.html
Extractors/ApiExtractor/: index.html
Extractors/DatabaseExtractor/: index.html
Extractors/SalesforceExtractor/: index.html
Extractors/SftpExtractor/: index.html
GoldLayerScripts/Transformation/: index.html
MedallionProcess/SilverLayer/: index.html
SilverLayerScripts/DataQualityCheck/: index.html
docs/: index.md
docs/Common/: DataProcessor.md  FileNameGenerator.md  JsonDataMapper.md  OrchestrationProcess.md  PatternValidator.md  RegexDateFormats.md  S3Process.md  SchemaCaster.md
docs/Examples/: Connection Config.md  CtlColumnMetadata.md  ctlApiConnectionsDtl.md
docs/Extractors/: ApiExtractor.md  DatabaseExtractor.md  S3Extractor.md  SalesforceExtractor.md  SftpExtractor.md
docs/GoldLayerScripts/: Transformation.md  TransformationDataQualityCheck.md
docs/MedallionProcess/: BronzeLayer.md  GoldLayer.md  SilverLayer.md
docs/Models/: Schema.md
docs/SilverLayerScripts/: DataQualityCheck.md  DataStandardization.md
site/: index.html  objects.inv
site/Common/JsonDataMapper/: index.html
site/Common/PatternValidator/: index.html
site/search/: search_index.json
src/datacraft_framework/: __init__.py
(+30 files in other folders)
