[project]
name = "datacraft-framework"
version = "1.0.0"
description = "A framework that eliminates the dependency on Apache Spark by leveraging delta-rs for the creation and management of Delta Lake tables. This framework follows Medallion architecture."
readme = "README.md"
authors = [
    { name = "Henry-Richard7", email = "henry.richard.2k@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.23",
    "deltalake>=0.25.5",
    "jaydebeapi>=1.2.3",
    "jsonpath-ng>=1.7.0",
    "jwt>=1.3.1",
    "niquests>=3.14.1",
    "paramiko>=3.5.1",
    "polars>=1.30.0",
    "polars-hash>=0.5.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "s3fs>=2025.5.1",
    "sqlmodel>=0.0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
